...
                        Image(systemName: "xmark.circle.fill")
                            .font(.title)
                            .foregroundColor(.primary)
                    }
                    .padding(.top, 20)
                    .padding(.trailing, 20)
                    .accessibility(identifier: "close")
                }
                
                if showHeart! {
                    VStack {
                        Button(action: {
                            self.toogleFavorite()
...
                        }) {
                            Image(systemName: favIcon)
                                .font(.title)
                                .foregroundColor(.pink)
                        }
                        .padding()
                        .accessibility(identifier: "favorite")
                    }
                    .frame(maxWidth: .infinity, alignment: .leading)
                    .background(Color(colorScheme == .dark ? .tertiarySystemBackground : .black))
                }
            }
        }
...
